--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta name="description" content="GOOGLE homepage">
   <meta name="author" content="Andrei Cirlan">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -15,8 +17,18 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+      <ul>
+        <a><li>Gmail</li></a>
+        <a><li>Imagini</li></a>
+        <a><li><span class="glyphicon glyphicon-th" aria-hidden="true"></span></li></a>
+        <a><li><span class="glyphicon glyphicon-bell"></span></span></li></a>
+        <a><li><img src="https://lh3.googleusercontent.com/-yaBMq8cWLyA/AAAAAAAAAAI/AAAAAAAAAAA/AMcAYi-ctUyFTiTBmOhE_RucTN_kCuOcUg/s32-c-mo/photo.jpg" /></li></a>
+      </ul>
+    </nav>
+  </header>
 
-  
 
 
 
