make the anchor for the navbar

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <header>
     <nav>
       <ul>
-        <a><li>Gmail</li></a>
-        <a><li>Imagini</li></a>
-        <a><li><span class="glyphicon glyphicon-th" aria-hidden="true"></span></li></a>
-        <a><li><span class="glyphicon glyphicon-bell"></span></span></li></a>
-        <a><li><img src="https://lh3.googleusercontent.com/-yaBMq8cWLyA/AAAAAAAAAAI/AAAAAAAAAAA/AMcAYi-ctUyFTiTBmOhE_RucTN_kCuOcUg/s32-c-mo/photo.jpg" /></li></a>
+        <li><a>Gmail</a></li>
+        <li><a>Imagini</a></li>
+        <li><a><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></li>
+        <li><a><span class="glyphicon glyphicon-bell"></span></span></a></li>
+        <li><a><img src="https://lh3.googleusercontent.com/-yaBMq8cWLyA/AAAAAAAAAAI/AAAAAAAAAAA/AMcAYi-ctUyFTiTBmOhE_RucTN_kCuOcUg/s32-c-mo/photo.jpg" /></a></li>
       </ul>
     </nav>
   </header>
