make the id bell for the navbar bell

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a>Gmail</a></li>
         <li><a>Imagini</a></li>
         <li><a><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></li>
-        <li><a><span class="glyphicon glyphicon-bell"></span></span></a></li>
+        <li><a><span class="glyphicon glyphicon-bell" id="bell"></span></a></li>
         <li><a><img src="https://lh3.googleusercontent.com/-yaBMq8cWLyA/AAAAAAAAAAI/AAAAAAAAAAA/AMcAYi-ctUyFTiTBmOhE_RucTN_kCuOcUg/s32-c-mo/photo.jpg" /></a></li>
       </ul>
     </nav>
