--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
   </header>
 
 
+<div id="center_logo">
+
+  <img id="google_logo" src="https://www.google.ro/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google brand image" />
+
+  <div class="div-input">
+    <input class="input-search" type="text">
+    </input>
+    <a href="#" aria-label="Instrumente pentru introducerea de text">
+      <img id="keyboard" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2c0td67hR5ifFx-Ctq3_l5fVN1E0sv5cpeBkThAr8vf59e-ehPg" alt="keyboard image" />
+    </a>
+    <a href="#" aria-label="Efectuati o cautare vocala">
+      <img id="microfon"  src="http://iconshow.me/media/images/ui/ios7-icons/png/512/mic.png" />
+    </a>
+  </div>
+
+</div>
+
+
 
 
 </body>
