made the search input with the 2 buttons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+  <!-- the header of the page, including photo for the profile -->
   <header>
     <nav>
       <ul>
@@ -29,6 +30,7 @@
     </nav>
   </header>
 
+  <!-- the logo with the search input -->
 
 <div id="center_logo">
 
@@ -48,6 +50,36 @@
   </div>
 
 </div>
+
+  <!-- the buttons for search and I am lucky -->
+
+<div class="button-group">
+  <button>Search Google</button>
+  <button>I feel lucky</button>
+</div>
+
+  <!-- the footer of the page -->
+
+<footer>
+  <!-- the left footer nav -->
+  <div>
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+
+  <!-- the right footer nav -->
+  <div>
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+
+</footer>
 
 
 
