make the footer of the page with anchors to nothing

--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@
 
 <footer>
   <!-- the left footer nav -->
-  <div>
+  <div class="left">
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><a href="#">Publicitate</a></li>
+      <li><a href="#">Companii</a></li>
+      <li><a href="#">Despre</a></li>
     </ul>
   </div>
 
   <!-- the right footer nav -->
-  <div>
+  <div class="right">
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><a href="#">Confidentialitate</a></li>
+      <li><a href="#">Termeni</a></li>
+      <li><a href="#">Setari</a></li>
     </ul>
   </div>
 
